# llm_council_crag

./: API_KEYS_GUIDE.md  EDI_MSE_Presentation_Content.txt  GITHUB_SETUP.md  PUSH_TO_GITHUB.md  README.md  WEB_SEARCH_FEATURE.md  demo_search.py  list_google_models.py  main.py  pyproject.toml  start.ps1  start.sh  test_api.py  test_api_direct.ps1  test_chairman.py  test_council.py  test_council_models.py  test_full_council.py  test_groq.py  test_models.py  test_providers.py  test_search.py
backend/: __init__.py  config.py  council.py  ingest.py  main.py  openrouter.py  rag_graph.py  rag_nodes.py  rag_state.py  search.py  storage.py  vectorstore.py
data/conversations/: 32896ae2-f5e4-4cf0-b3bd-ea591fa7fcf0.json  32fb29f9-ae87-42cf-9226-9d6d54594906.json  33898e13-0fce-45bf-9818-6bc8ced661d4.json  7ed9a9d2-e718-4b5f-85da-3ba632f2e2c0.json  908595ab-3157-44ed-8a96-ef81906f338c.json  eee1e9ff-fee1-4463-8a07-7d92dc8f5ff6.json  efd0a4f7-97d5-457c-9ae7-51840957a56c.json
data/vectorstore/: chroma.sqlite3
